[package]
name = "ptstd"
version = "0.1.0"
edition = "2021"
description = "A collection of wrapped crates and utils"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# 加密
rust-crypto = "0.2.36"
rsa = "0.7.1"

# 随机数
rand = "0.8.5"

# 错误处理
thiserror = "1.0.37"
anyhow = "1.0.66"

# 线性代数
ndarray = "0.15.6"

[dev-dependencies]
rand = "0.8.5"